Change highlight color

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -167,7 +167,7 @@ h1, h2, h3, h4, h5, h6, figure {
   background: $brand-primary;
 }
 ::selection {
-  color: $brand-white;
+  color: #d4662a;
   background: $brand-primary;
 }
 
