Highlight change part 2

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 ::selection {
   color: #fff;
-  background: #DD356E;
+  background: #11b643;
 }
 
 .fh5co-nav {
