--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   font-size: 18px;
   line-height: 1.7;
   color: #333333;
-  background: #fff;
+  background: #f5e8d1;
 }
 
 #page {
@@ -52,10 +52,14 @@ a {
   -o-transition: 0.5s;
   transition: 0.5s;
 }
-a:hover, a:active, a:focus {
+a:hover, a:active {
   color: #DD356E;
   outline: none;
   text-decoration: none;
+}
+a:focus{
+  outline: 2px solid #11b643;
+  outline-style: dashed;
 }
 
 p {
@@ -85,7 +89,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .fh5co-nav {
-  background: #fff;
+  background: #f5e8d1;
 }
 .fh5co-nav .top-menu {
   padding: 28px 0;
@@ -196,7 +200,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #fff;
 }
 .fh5co-nav ul li.btn-cta a span {
-  background: #dd356e;
+  background: #da8431;
   padding: 4px 10px;
   display: -moz-inline-stack;
   display: inline-block;
@@ -227,7 +231,7 @@ h1, h2, h3, h4, h5, h6, figure {
   content: '';
   width: 30px;
   height: 2px;
-  background: #DD356E;
+  background: #da8431;
   margin: 0 auto;
 }
 
@@ -332,7 +336,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-header .display-tc .btn,
 .fh5co-cover .display-tc .btn {
   padding: 15px 30px;
-  color: #fff;
+  color: #f5e8d1;
   border: none !important;
   font-size: 18px;
 }
@@ -358,7 +362,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-header .display-tc .btn:hover, #fh5co-header .display-tc .btn:focus,
 .fh5co-cover .display-tc .btn:hover,
 .fh5co-cover .display-tc .btn:focus {
-  color: #fff !important;
+  color: #f5e8d1 !important;
 }
 #fh5co-header .display-tc .btn.btn-demo,
 .fh5co-cover .display-tc .btn.btn-demo {
@@ -369,7 +373,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .fh5co-cover .display-tc .btn.btn-demo:hover,
 .fh5co-cover .display-tc .btn.btn-demo:focus {
   background: rgba(221, 53, 110, 0.9) !important;
-  color: #fff !important;
+  color: #f5e8d1 !important;
 }
 #fh5co-header .display-tc .btn:hover,
 .fh5co-cover .display-tc .btn:hover {
@@ -386,7 +390,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-header .display-tc .form-inline .form-group .form-control,
 .fh5co-cover .display-tc .form-inline .form-group .form-control {
   width: 100%;
-  background: #fff;
+  background: #f5e8d1;
   border: none;
 }
 
