--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,7 +7,7 @@ $grid-gutter-width: 40px !default;
 $border-radius-base:  4px !default;
 $padding-base-vertical: 14px !default;
 
-$brand-primary: #DD356E !default;
+$brand-primary: #da8431 !default;
 $brand-secondary: #FEE856 !default;
 $brand-tertiary: #2A528A !default;
 
@@ -113,7 +113,7 @@ body {
 	font-size: 18px;
 	line-height: 1.7;
 	color: darken($brand-white,80%);
-	background: #fff;
+	background: #f5e8d1;
 }
 #page {
 	position: relative;
