--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,7 +7,7 @@ $grid-gutter-width: 40px !default;
 $border-radius-base:  4px !default;
 $padding-base-vertical: 14px !default;
 
-$brand-primary: #da8431 !default;
+$brand-primary: #ff4a02 !default;
 $brand-secondary: #FEE856 !default;
 $brand-tertiary: #2A528A !default;
 
@@ -113,7 +113,7 @@ body {
 	font-size: 18px;
 	line-height: 1.7;
 	color: darken($brand-white,80%);
-	background: #f5e8d1;
+	background: #fffdf7;
 }
 #page {
 	position: relative;
@@ -172,7 +172,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .fh5co-nav {
-	background: $brand-white;
+	background: #fffdf7;
 	.top-menu{
 		padding: 28px 0;
 	}
@@ -949,14 +949,14 @@ box-shadow: 0px 8px 16px -4px rgba(0,0,0,0.13);
 
 .fh5co-team{
 	position: relative;
-	background: $brand-white;
+	background: #fffdf7;
 	padding: 30px;
 	border-radius: 5px;
 	margin-bottom: 30px;
 
 	-webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.06);
 	-moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.06);
-	box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.06);
+	box-shadow: 0px 2px 5px 0px #11b643;
 
 	@media screen and (max-width: $screen-sm) {
 		border-right: 0;
