--- a/sass/style.scss
+++ b/sass/style.scss
@@ -113,7 +113,7 @@ body {
 	font-size: 18px;
 	line-height: 1.7;
 	color: darken($brand-white,80%);
-	background: #fffdf7;
+	background: #fffaf0;
 }
 #page {
 	position: relative;
@@ -172,7 +172,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .fh5co-nav {
-	background: #fffdf7;
+	background: #fffaf0;
 	.top-menu{
 		padding: 28px 0;
 	}
