--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #fff;
 }
 .fh5co-nav ul li.btn-cta a span {
-  background: #da8431;
+  background: #ff4a02;
   padding: 4px 10px;
   display: -moz-inline-stack;
   display: inline-block;
@@ -232,7 +232,7 @@ h1, h2, h3, h4, h5, h6, figure {
   content: '';
   width: 30px;
   height: 2px;
-  background: #da8431;
+  background: #ff4a02;
   margin: 0 auto;
 }
 
@@ -903,13 +903,13 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .fh5co-team {
   position: relative;
-  background: #fff;
+  background: #fffaf0;
   padding: 30px;
   border-radius: 5px;
   margin-bottom: 30px;
   -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
   -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
+  box-shadow: 0px 2px 5px 0px #11b643;
 }
 @media screen and (max-width: 768px) {
   .fh5co-team {
