--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,20 @@ body {
   background: #fffaf0;
 }
 
+#mydiv {
+  position: absolute;
+  z-index: 9;
+  background-color: none;
+  text-align: center;
+}
+
+#mydivheader {
+  padding: 10px;
+  cursor: move;
+  z-index: 10;
+  background-color: none;
+}
+
 #page {
   position: relative;
   overflow-x: hidden;
